--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,9 @@ jobs:
       run: docker-compose up -d
 
     - name: wait for service
-      run: until curl -s http://localhost:5000/ ; do echo "no connection..." ; sleep 1 ; done
+      run: |
+        until curl -s http://localhost:5000/ ; do echo "no connection..." ; sleep 1 ; done
+        docker ps
 
     - name: run tests
       run: docker exec -t sage-ecr_sage-ecr_1 pytest -v
