--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         sleep 5
         docker-compose -v
         docker exec -t sage-ecr_sage-ecr_1 printenv
-        while [[ $(curl -s http://localhost:5000/healthy) != "ok" ]] ; do echo "no connection..." ; sleep 1 ; done
+        while [[ ${HEALTH}_ != "ok_" ]] ; do HEALTH=$(curl -s http://localhost:5000/healthy) ; echo $HEALTH ; sleep 1 ; done
 
     - name: run tests
       run: docker exec -t sage-ecr_sage-ecr_1 pytest -v
