--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Debug info
+      run: docker volume ls
+
     - name: Build the Docker image
       run: docker-compose build
 
@@ -23,11 +26,7 @@ jobs:
       run: docker-compose up -d
 
     - name: wait for service
-      run: |
-        sleep 5
-        docker-compose -v
-        docker exec -t sage-ecr_sage-ecr_1 printenv
-        while [[ ${HEALTH}_ != "ok_" ]] ; do HEALTH=$(curl -s http://localhost:5000/healthy) ; echo $HEALTH ; sleep 1 ; done
+      run: while [[ ${HEALTH}_ != "ok_" ]] ; do HEALTH=$(curl -s http://localhost:5000/healthy) ; echo $HEALTH ; sleep 1 ; done
 
     - name: run tests
       run: docker exec -t sage-ecr_sage-ecr_1 pytest -v
