--- a/jenkins/casc_jenkins.yaml
+++ b/jenkins/casc_jenkins.yaml
@@ -9,7 +9,9 @@ jenkins:
           password: "test"
         - id: "admin"
           password: "testtest"
-  authorizationStrategy: loggedInUsersCanDoAnything
+  authorizationStrategy: 
+    loggedInUsersCanDoAnything:
+      allowAnonymousRead: true
 
 
   
