test runslow option

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,5 @@ jobs:
       run: while [ $(curl -s localhost:5000/healthy)_ != "ok_"  ] ; do echo waiting... ; docker-compose logs --tail=20 ; echo "jenkins log:" ; docker logs jenkins --tail=20 ; sleep 2 ; done
 
     - name: run tests and coverage
-      run: docker exec sage-ecr_sage-ecr_1 /bin/ash -c 'coverage run -m pytest -v &&  coverage report -m  --fail-under 70'
+      run: docker exec sage-ecr_sage-ecr_1 /bin/ash -c 'coverage run -m pytest -v --runslow &&  coverage report -m  --fail-under 70'
 
