SAGE-326: added docker registry

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,11 +2,6 @@ version: '3.7'
 
 # to start this enviornment with a jenkins instance, use run.sh instead of this docker-compose file directly
 
-# if you already have a jenkins server, provide enviornment variables, for example:
-# export JENKINS_SERVER=http://host.docker.internal:8082
-# export JENKINS_USER=ecrdb
-# export JENKINS_TOKEN=$(docker exec -ti jenkins cat /var/jenkins_home/secrets/ecrdb_token.txt)
-
 
 
 services:
@@ -24,7 +19,8 @@ services:
       - ${PWD}:/usr/src/app  # for development only
     restart: always
     env_file: mysql.env
-   
+    networks:
+      - sage-ecr
     environment:
       DISABLE_AUTH: 1
       tokenInfoEndpoint: ${SageTokenInfoEndpoint} 
@@ -43,9 +39,22 @@ services:
     volumes:
       - ${PWD}/schema.sql:/docker-entrypoint-initdb.d/init.sql
       - sage-ecr-db:/var/lib/mysql
+    networks:
+      - sage-ecr
 
+  registry:
+    restart: always
+    image: registry:2
+    ports:
+      - 5001:5000
+    networks:
+      - sage-ecr
 
 volumes:
   sage-ecr-db:
   
     
+networks:
+  sage-ecr:
+   name: sage-ecr
+
