fix registry name

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,7 +42,7 @@ services:
     networks:
       - sage-ecr
 
-  registry:
+  registry.local:
     restart: always
     image: registry:2
     ports:
