JENKINS_OPTS without prefix

--- a/kubernetes/ecr-jenkins.config
+++ b/kubernetes/ecr-jenkins.config
@@ -6,4 +6,5 @@ metadata:
 data:
   #JAVA_OPTS: "-Dhudson.footerURL=http://192.168.64.6"
   JAVA_OPTS: ""
-  JENKINS_OPTS: --prefix=/jenkins 
+  #JENKINS_OPTS: --prefix=/jenkins 
+  JENKINS_OPTS: "" 
