--- a/docker_auth/kubernetes/kustomization.yaml
+++ b/docker_auth/kubernetes/kustomization.yaml
@@ -1,8 +1,17 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+
+
 resources:
   
   - ecr-docker-auth.deployment.yaml
   - ecr-docker-auth.ingress.yaml
   - ecr-docker-auth.secret.yaml
+
+
+# required in overlay
+#configMapGenerator:
+#- name: ecr-docker-auth-config
+#  files:
+#  - docker-auth.yml
