--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
       JENKINS_SERVER: ${JENKINS_SERVER}
       JENKINS_USER: ${JENKINS_USER}
       JENKINS_TOKEN: ${JENKINS_TOKEN}
-      
+      DOCKER_REGISTRY_PASSWORD: ${DOCKER_REGISTRY_PASSWORD}
     
 
 
