--- a/jenkins/casc_jenkins.yaml
+++ b/jenkins/casc_jenkins.yaml
@@ -13,5 +13,14 @@ jenkins:
     loggedInUsersCanDoAnything:
       allowAnonymousRead: true
 
+credentials:
+  system:
+    domainCredentials:
+      - credentials:
+        - usernamePassword:
+              scope: GLOBAL
+              id: registry-user
+              username: sage-ecr
+              password: 123
 
   
