--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -15,12 +15,14 @@ resources:
 
   - ecr-jenkins.ingress
   - ecr-jenkins.config
-  - ecr-jenkins-casc.secret
   - ecr-jenkins.deployment
   - ecr-jenkins.service
-
-  # the registry is not included here ! 
-  
+  - ecr-jenkins.pvc
 
 
-  
+
+  # use in overlay
+  #secretGenerator:
+  #- name: ecr-jenkins-casc-secret
+  #  files:
+  #    - casc_jenkins.yaml
