--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,7 +30,7 @@ services:
       JENKINS_USER: ${JENKINS_USER}
       JENKINS_TOKEN: ${JENKINS_TOKEN}
       DOCKER_REGISTRY_PASSWORD: ${DOCKER_REGISTRY_PASSWORD}
-    
+      DOCKER_REGISTRY_URL: "registry.local:5002"
 
 
   db:
@@ -46,7 +46,7 @@ services:
     restart: always
     image: registry:2
     ports:
-      - 5001:5000
+      - 5002:5000
     networks:
       - sage-ecr
 
