--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,11 +27,11 @@ services:
       tokenInfoUser: ${SageTokenInfoUser}  
       tokenInfoPassword: ${SageTokenInfoPassword}
       JENKINS_SERVER: ${JENKINS_SERVER}
-      JENKINS_USER: ${JENKINS_USER}
+      JENKINS_USER: ecrdb
       JENKINS_TOKEN: ${JENKINS_TOKEN}
       DOCKER_REGISTRY_PASSWORD: ${DOCKER_REGISTRY_PASSWORD}
       DOCKER_REGISTRY_URL: "registry.local:5002"
-
+      ADD_USER: ${ADD_USER}
 
   db:
     image: mysql:8.0.20
