--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -29,11 +29,15 @@ COPY ./get_docker_binary.sh /
 ENV CASC_JENKINS_CONFIG /config/casc_jenkins.yaml
 
 # Jenkins: groovy, create token
-COPY init.groovy /var/jenkins_home/
-
+#COPY init.groovy /var/jenkins_home/ # Volumes would overwrite this
+COPY init.groovy /
 
 # this is needed to for docker
 USER root
+
+RUN sed -i '2icp /init.groovy /var/jenkins_home/' /usr/local/bin/jenkins.sh
+
+
 
 RUN apk update && apk add jq curl file
 
@@ -46,3 +50,4 @@ RUN mkdir -p ~/.docker/cli-plugins/
 RUN curl --silent -L -o ~/.docker/cli-plugins/docker-buildx https://github.com/docker/buildx/releases/download/v0.4.1/buildx-v0.4.1.linux-amd64
 RUN chmod a+x ~/.docker/cli-plugins/docker-buildx
 
+RUN echo '{ "experimental":"enabled" } ' > /root/config.json
