--- a/kubernetes/ecr-jenkins.yaml
+++ b/kubernetes/ecr-jenkins.yaml
@@ -1,3 +1,69 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: ecr-jenkins-config
+  namespace: sage
+data:
+  #JAVA_OPTS: "-Dhudson.footerURL=http://192.168.64.6"
+  JAVA_OPTS: ""
+  #JENKINS_OPTS: --prefix=/jenkins
+  JENKINS_OPTS: ""
+  USE_HOST_DOCKER: "0"
+  DOCKER_REGISTRY_URL: ""
+
+---
+
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: ecr-jenkins-ingress
+  namespace: sage
+  annotations:
+    kubernetes.io/ingress.class: nginx
+
+spec:
+  rules:
+  - http:
+      paths:
+      - path: /ecr/jenkins/
+        backend:
+          serviceName: ecr-jenkins
+          servicePort: 8080
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ecr-jenkins
+  namespace: sage
+  labels:
+    app: ecr-jenkins
+spec:
+  selector:
+    k8s-app: ecr-jenkins
+  type: ClusterIP
+  ports:
+  - name: ecr-jenkins
+    port: 8080
+    protocol: TCP
+    targetPort: 8080
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: ecr-jenkins-pvc
+  namespace: sage
+spec:
+  #storageClassName: manual
+  #accessModes:
+  #- ReadWriteOnce
+  #resources:
+  #  requests:
+  #    storage: 500Mi
+
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -77,4 +143,4 @@ spec:
       - name: ecr-jenkins-casc-secret
         secret:
           secretName: ecr-jenkins-casc-secret
-         
+
