--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -1,17 +1,10 @@
+
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  
-  - ecr-api.deployment
-  - ecr-api.ingress
-  - ecr-api.secret
-  - ecr-api.service
 
-  - ecr-db.deployment
-  - ecr-db.secret
-  - ecr-db.service
-  - ecr-db-local.pvc
+  - ecr-api.yaml
 
   - ecr-jenkins.ingress
   - ecr-jenkins.config
