--- a/kubernetes/base/ecr-api.yaml
+++ b/kubernetes/base/ecr-api.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: ecr-api-config
-  namespace: sage
 data:
     DISABLE_AUTH: "1"
     DOCKER_REGISTRY_URL: "ecr-registry:80"
@@ -16,7 +15,7 @@ data:
     DOCKER_BUILD_ARGS: ""
     AUTH_METHOD: "static"
 
-    MYSQL_HOST: "ecr-db"
+    MYSQL_HOST: "mysql"
     MYSQL_USER: "ecr-user"
     MYSQL_DATABASE: "SageECR"
 
@@ -26,7 +25,6 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: ecr-api-secret
-  namespace: sage
 type: Opaque
 stringData:
 
@@ -36,56 +34,10 @@ stringData:
 
 ---
 
-apiVersion: extensions/v1beta1
-kind: Ingress
-metadata:
-  name: ecr-api-ingress
-  namespace: sage
-  annotations:
-
-    kubernetes.io/ingress.class: nginx
-    #nginx.ingress.kubernetes.io/proxy-body-size: "0" # required for docker registry
-spec:
-  rules:
-  - host: ecr.localhost
-    http:
-      paths:
-      - path: /
-        backend:
-          serviceName: ecr-api
-          servicePort: 5000
-
-  #- host: ecr-registry
-  #  http:
-  #    paths:
-  #    - path: /
-  #      backend:
-  #        serviceName: ecr-registry
-  #        servicePort: 5000
-
----
 apiVersion: v1
 kind: Service
 metadata:
   name: ecr-api
-  namespace: sage
-  labels:
-    app: ecr-api
-spec:
-  selector:
-    k8s-app: ecr-api
-  type: ClusterIP
-  ports:
-  - name: ecr-api
-    port: 5000
-    protocol: TCP
-    targetPort: 5000
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: ecr-api
-  namespace: sage
   labels:
     app: ecr-api
 spec:
@@ -104,7 +56,6 @@ metadata:
   labels:
     k8s-app: ecr-api
   name: ecr-api
-  namespace: sage
 spec:
   replicas: 1
   selector:
