--- a/kubernetes/base/ecr-jenkins.yaml
+++ b/kubernetes/base/ecr-jenkins.yaml
@@ -2,40 +2,20 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: ecr-jenkins-config
-  namespace: sage
 data:
   #JAVA_OPTS: "-Dhudson.footerURL=http://192.168.64.6"
   JAVA_OPTS: ""
   #JENKINS_OPTS: --prefix=/jenkins
-  JENKINS_OPTS: ""
+  JENKINS_OPTS: "--prefix=/ecr/jenkins/"
   USE_HOST_DOCKER: "0"
   DOCKER_REGISTRY_URL: ""
 
----
-
-apiVersion: extensions/v1beta1
-kind: Ingress
-metadata:
-  name: ecr-jenkins-ingress
-  namespace: sage
-  annotations:
-    kubernetes.io/ingress.class: nginx
-
-spec:
-  rules:
-  - http:
-      paths:
-      - path: /ecr/jenkins/
-        backend:
-          serviceName: ecr-jenkins
-          servicePort: 8080
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: ecr-jenkins
-  namespace: sage
   labels:
     app: ecr-jenkins
 spec:
@@ -53,14 +33,13 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ecr-jenkins-pvc
-  namespace: sage
 spec:
   #storageClassName: manual
-  #accessModes:
-  #- ReadWriteOnce
-  #resources:
-  #  requests:
-  #    storage: 500Mi
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 500Mi
 
 
 ---
@@ -70,7 +49,6 @@ metadata:
   labels:
     k8s-app: ecr-jenkins
   name: ecr-jenkins
-  namespace: sage
 spec:
   replicas: 1
   selector:
