--- a/kubernetes/base/ecr-registry.yaml
+++ b/kubernetes/base/ecr-registry.yaml
@@ -1,8 +1,7 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ecr-registry-ingress
-  namespace: sage
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/proxy-body-size: "0" # required for docker registry
@@ -10,18 +9,19 @@ spec:
   rules:
 
     - host: ecr-registry
-        http:
+      http:
         paths:
         - path: /
-            backend:
-            serviceName: ecr-registry
-            servicePort: 5000
+          backend:
+            service:
+              name: ecr-registry
+              port:
+                number: 5000
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: ecr-registry
-  namespace: sage
   labels:
     app: ecr-registry
 spec:
@@ -40,7 +40,6 @@ metadata:
   labels:
     k8s-app: ecr-registry
   name: ecr-registry
-  namespace: sage
 spec:
   replicas: 1
   selector:
