--- a/jenkins/casc_jenkins.yaml
+++ b/jenkins/casc_jenkins.yaml
@@ -8,8 +8,8 @@ jenkins:
         - id: "ecrdb"
           password: "test"
         - id: "admin"
-          password: "testtest"
-  authorizationStrategy: 
+          password: "admin"
+  authorizationStrategy:
     loggedInUsersCanDoAnything:
       allowAnonymousRead: true
 
@@ -23,4 +23,4 @@ credentials:
               username: sage-ecr
               password: 123
 
-  
+
