--- a/example_app.yaml
+++ b/example_app.yaml
@@ -1,9 +1,10 @@
 
-name: "simple"
+# namespace: "sage"
+# name: "simple"
+# version : "1.0"
+
 description: "very important app"
-version : "1.0"
-namespace: "sage"
-source: 
+source:
     architectures :
         - "linux/amd64"  # required
     url: "https://github.com/waggle-sensor/edge-plugins.git"   # required
@@ -12,15 +13,15 @@ source:
     dockerfile : "Dockerfile_sage"   # optional, default: Dockerfile , relative to context directory
     build_args:
       VARIABLE1: "value1"
-resources: 
+resources:
   - type: "RGB_image_producer"
     view: "top"
     min_resolution: "600x800"
- 
-inputs: 
+
+inputs:
     - id: "speed"
-      type: "int" 
-     
+      type: "int"
+
 metadata:
   my-science-data : 12345
-  
+
