--- a/example_app.yaml
+++ b/example_app.yaml
@@ -8,7 +8,7 @@ source:
     architectures :
         - "linux/amd64"  # required, valid fields: "linux/amd64", "linux/arm64", "linux/arm/v6", "linux/arm/v7", "linux/arm/v8
     url: "https://github.com/waggle-sensor/edge-plugins.git"   # required
-    branch: "main"  # optional, default: main
+    branch: "master"  # optional, default: main
     directory : "plugin-simple"  # optional, default: root of git repository
     dockerfile : "Dockerfile_sage"   # optional, default: Dockerfile , relative to context directory
     build_args: # optional, key-value pairs for docker build
