use base image jenkins:2.289.1-lts-jdk11

--- a/jenkins/casc_jenkins.yaml
+++ b/jenkins/casc_jenkins.yaml
@@ -1,4 +1,6 @@
 jenkins:
+  disabledAdministrativeMonitors:
+    - hudson.model.UpdateCenter$CoreUpdateMonitor
   systemMessage: "Jenkins configured automatically by Jenkins Configuration as Code plugin\n\n"
 
   securityRealm:
