--- a/example_app.yaml
+++ b/example_app.yaml
@@ -7,10 +7,10 @@ description: "very important app"
 source:
     architectures :
         - "linux/amd64"  # required, valid fields: "linux/amd64", "linux/arm64", "linux/arm/v6", "linux/arm/v7", "linux/arm/v8
-    url: "https://github.com/waggle-sensor/edge-plugins.git"   # required
-    branch: "master"  # optional, default: main
-    directory : "plugin-simple"  # optional, default: root of git repository
-    dockerfile : "Dockerfile_sage"   # optional, default: Dockerfile , relative to context directory
+    url: "https://github.com/waggle-sensor/plugin-numpy-example.git"   # required
+    branch: "main"  # optional, default: main
+    directory : ""  # optional, default: root of git repository
+    dockerfile : "Dockerfile"   # optional, default: Dockerfile , relative to context directory
     build_args: # optional, key-value pairs for docker build
       VARIABLE1: "value1"
 resources:  # future feature
@@ -24,3 +24,7 @@ inputs:  # future feature
 
 metadata: # custom key-value pairs
   my-science-data : 12345
+
+testing:
+  command: [python3,test.py]
+  
