--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,11 @@ services:
       DOCKER_REGISTRY_PASSWORD: ${DOCKER_REGISTRY_PASSWORD}
       DOCKER_REGISTRY_URL: "registry.local:5002"
       ADD_USER: ${ADD_USER}
+      S3_ENDPOINT: ${S3_ENDPOINT}
+      S3_ACCESS_KEY: ${S3_ACCESS_KEY}
+      S3_SECRET_KEY: ${S3_SECRET_KEY}
+      S3_BUCKET: ${S3_BUCKET}
+      S3_FOLDER: ${S3_FOLDER}
 
   db:
     image: mysql:8.0.20
